2024-12-08T02:01:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12217920453 # 503
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-08
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 981 1736 / 983 1738
* notice: next accum: outdated-unq outdated-all / unq all: 982 1737 / 983 1738
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-24] / []

2024-12-02T01:55:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12111258756 # 497
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-02
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 981 1736 / 982 1737
* notice: next accum: outdated-unq outdated-all / unq all: 981 1736 / 983 1738
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-01]

2024-11-28T01:52:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12061101484 # 493
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-28
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 980 1735 / 982 1737
* notice: next accum: outdated-unq outdated-all / unq all: 981 1736 / 982 1737
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-13] / []

2024-11-25T01:52:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12001752799 # 490