@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-12-08T02:01:10Z",
+  "timestamp" : "2024-12-12T01:54:00Z",
   "count_outdated" : 1737,
   "uniques_outdated" : 982,
-  "count" : 1738,
-  "uniques" : 983,
+  "count" : 1739,
+  "uniques" : 984,
   "clones" : [
     {
       "timestamp": "2024-12-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
