@@ -1,3 +1,12 @@
+2024-12-12T01:54:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12288339931 # 507
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-12
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 982 1737 / 983 1738
+* notice: next accum: outdated-unq outdated-all / unq all: 982 1737 / 984 1739
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-12-11]
+
 2024-12-08T02:01:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12217920453 # 503
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-08
